--- a/Controls/TcHmiRiesControls/TcHmiRiesControls/TcHmiSlideButton/Template.html
+++ b/Controls/TcHmiRiesControls/TcHmiRiesControls/TcHmiSlideButton/Template.html
@@ -1,6 +1,7 @@
 ﻿<div class="Ries_Hmi_Controls_TcHmiSlideButton-Template tchmi-box">
     <label class="switch">
         <input class="switch-input" type="checkbox" />
-        <span class="switch-label" data-on="On" data-off="Off"></span> <span class="switch-handle"></span>
+        <span class="switch-label" data-on="On" data-off="Off"></span> 
+        <span class="switch-handle"></span>
     </label>
 </div>
